# VapourSynth-BM3D

./: .gitignore  GNUmakefile  LICENSE  README.md  configure  meson.build  pyproject.toml
.github/workflows/: build.yml
include/: BM3D.h  BM3D_Base.h  BM3D_Base.hpp  BM3D_Basic.h  BM3D_Final.h  Block.h  Conversion.hpp  Helper.h  OPP2RGB.h  RGB2OPP.h  Specification.h  Type.h  VAggregate.h  VAggregate.hpp  VBM3D_Base.h  VBM3D_Base.hpp  VBM3D_Basic.h  VBM3D_Final.h  fftw3_helper.hpp
msvc/: BM3D.sln  BM3D.vcxproj  BM3D.vcxproj.filters  FFTW3.Win32.props  FFTW3.x64.props  Includes.props  VapourSynth.Plugin.Win32.props  VapourSynth.Plugin.x64.props  msvc.sln  msvc.vcxproj  msvc.vcxproj.filters
msvc14/: BM3D.sln  BM3D.vcxproj  Includes.props  VapourSynth.Plugin.Win32.props  VapourSynth.Plugin.x64.props
source/: BM3D.cpp  BM3D_Base.cpp  BM3D_Basic.cpp  BM3D_Final.cpp  VAggregate.cpp  VBM3D_Base.cpp  VBM3D_Basic.cpp  VBM3D_Final.cpp  VSPlugin.cpp
